--- a/computermonitor/templates/computermonitor/computerbackup_list.html
+++ b/computermonitor/templates/computermonitor/computerbackup_list.html
@@ -1,4 +1,5 @@
 {% extends "computermonitor/base.html" %} 
+{% load humanize %}
 {% load staticfiles %}
 {% block content %}
 
@@ -31,7 +32,10 @@
                           <td style='color: green;'> {{ computer.backup_status|upper }} </td>
                       {% endif %} 
 
-                      <td> {{ computer.backup_time }} </td>
+
+                       <!-- datepublished backup_time-->
+
+                      <td> {{ computer.datepublished|naturaltime }} </td>
                       <td> {{ computer.input_name }} </td>
                       
                       {% if user.is_authenticated %}
