--- a/computermonitor/templates/computermonitor/computer_list.html
+++ b/computermonitor/templates/computermonitor/computer_list.html
@@ -1,4 +1,5 @@
 {% extends "computermonitor/base.html" %} 
+{% load humanize %}
 {% load staticfiles %}
 
 {% block content %}
@@ -6,7 +7,7 @@
 <div class="container">
 
      
-    <div class="col-md-6"> 
+    <div class="col-md-8"> 
         <div class="page-header">
         <h2>Computers  </h2>
      
@@ -17,6 +18,7 @@
           <th>Computer Name</th>
           <th>Computer User</th>
           <th>Computer Model</th>
+          <th>Last Backup </th>
           <th>Backups </th>
         </tr>
       </thead>
@@ -42,9 +44,12 @@
             <td><a href="{% url 'computermonitor:computer_detail' pk=computer.pk %}"> {{ computer.name  }}</a></td>
             <td> {{ computer.user }} </td>
             <td> {{ computer.model }} </td>
+            <td> {{ computer.lastBackupDate|naturaltime  }} </td>
             <td> {{ computer.backups.count }} </td>
+
+
       
-         
+            <!--computer.lastBackupDate.backup_time -->
           <tr>
           {% endfor %}
       </tbody>
