--- a/computermonitor/templates/computermonitor/base.html
+++ b/computermonitor/templates/computermonitor/base.html
@@ -8,8 +8,11 @@
             <!-- custom styles -->
         <link rel="stylesheet" href="{% static 'computermonitor/css/computer.css' %}">
       
+      
             <!-- Bootstrap -->
-        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+       <!-- <script src="//code.jquery.com/jquery-1.11.1.min.js"></script> -->
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
