--- a/computermonitor/templates/computermonitor/computer_detail.html
+++ b/computermonitor/templates/computermonitor/computer_detail.html
@@ -104,12 +104,13 @@
  
  
 </div>
-<div class="row">
-     <div  class="col-md-4">
-        
 
+<div class="row">
+
+     <div  class="col-md-4 card">
+        <h2> Backups </h2>
         <div>
-        <table class="table table-striped">
+        <table class="table table-hover">
                 <thead>
                 <tr>
                 
