--- a/computermonitor/templates/computermonitor/computerbackup_list.html
+++ b/computermonitor/templates/computermonitor/computerbackup_list.html
@@ -3,21 +3,25 @@
 {% load staticfiles %}
 {% block content %}
 
+
 <div class="container">
 
      
     <div class="col-md-6"> 
         <div class="page-header">
-        <h2>Computers Backups</h2>
+        <h2>Computers Backups</h2>  
+        <div>
+         <h3> <a href="{% url 'computermonitor:computer_list_detail'  %}"><span  class="glyphicon glyphicon-list-alt"></span></a></h3>
+        </div>
         </div>
         
         <table class="table table-hover">
                 <thead>
                   <tr>
                     <th>Computer</th>
-                    <th>Backup status</th>
-                    <th>Backup time</th>
-                    <th>Input name</th>
+                    <th>Status</th>
+                    <th>Time</th>
+                    <th>Name</th>
                   </tr>
                 </thead>
                 <tbody>
