--- a/computermonitor/templates/computermonitor/computerbackup_list.html
+++ b/computermonitor/templates/computermonitor/computerbackup_list.html
@@ -11,7 +11,7 @@
         <div class="page-header">
         <h2>Computers Backups</h2>  
         <div>
-         <h3> <a href="{% url 'computermonitor:computer_list_detail'  %}"><span  class="glyphicon glyphicon-list-alt"></span></a></h3>
+         <h3> <a href="{% url 'computermonitor:computer_backuplist_detail'  %}"><span  class="glyphicon glyphicon-list-alt"></span></a></h3>
         </div>
         </div>
         
