--- a/computermonitor/templates/computermonitor/computer_detail.html
+++ b/computermonitor/templates/computermonitor/computer_detail.html
@@ -110,6 +110,9 @@
      <div  class="col-md-4 card">
         <h2> Backups </h2>
         <div>
+                <h3><a href="{% url 'computermonitor:computer_backuplist'  %}"><span  class="glyphicon glyphicon-trash"></span></a></h3>
+        </div>
+        <div>
         <table class="table table-hover">
                 <thead>
                 <tr>
