added a daily backup view and delete all alert view

--- a/computermonitor/templates/computermonitor/backup_list_detail.html
+++ b/computermonitor/templates/computermonitor/backup_list_detail.html
@@ -5,21 +5,20 @@
 {% load staticfiles %}
 {% block content %}
 
+<script>
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip();   
+        });
+        </script>
 
 
-<!doctype html>
-<html>
-    <head>
-        <title>List of Computer Backups</title>
-       
-    </head>
-    <body>
+
     <div class="container">
          <div class="col-md-7"> 
             <div class="page-header">
                     <h2>Computers Backups</h2>  
                     <div>
-                    <h3><a href="{% url 'computermonitor:computer_backuplist'  %}"><span  class="glyphicon glyphicon-th-list"></span></a>
+                    <h3><a href="{% url 'computermonitor:computer_backuplist'  %}" data-toggle="tooltip" title="Normal View"  ><span  class="glyphicon glyphicon-th-list"></span></a>
                     <a href="{% url 'computermonitor:computer_backuplist'  %}"><span  class="glyphicon glyphicon-trash"></span></a></h3>
                     </div>
             </div>
@@ -31,8 +30,6 @@
 
 
 
-    </body>
-    
-</html>
+
 
 {% endblock %}
